src/Tests/Error/NotSameError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class NotSameError extends AssertError
{
}
